[package]
name = "dbn_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
databento = "0.6.0"
regex = "1.10.2"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
